# gem-opt

./: .coverage  .dockerignore  .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml
gem_opt/: const.py  main.py
gem_opt/tests/: test_graph_utils.py  test_metric_utils.py
gem_opt/tests/test_wrappers/: test_scipy.py
gem_opt/utils/: __init__.py  graph_utils.py  metric_utils.py
gem_opt/wrappers/: __init__.py  base.py  scipy.py
notebooks/: README.md
